// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`layout snapshots dashboard view at 140x40 1`] = `
"⚡ Nexum · Autonomous Coding Agent  │ Mission: add authentication                                   MODE: CODE   MODEL: qwen3:30b   10:42:11
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
MISSION                        │ > create filesystem tool                                                   │ FILES (2 CHANGED)
add authentication             │                                                                            │ M src/tools/fs.ts
 ✓ Understand                  │ ◆ Nexum · local/qwen3:30b                                                  │ A src/tools/index.ts
 ✓ Inspect                     │   Analyzing project structure and existing patterns...                     │
 ✓ Plan                        │     • Reading package.json                                                 │
 ▶ Execute              0m 00s │     • Found TypeScript project                                             │
 ○ Complete                    │ ◆ Execute > Add Devise gem                                                 │
   ── ✓ Create User model      │                                                                            │
   ── ▶ Add Devise gem         │ 📄 Gemfile (pending_review) +1 -0                                          │
                               │   +gem 'devise'                                                            │
                               │   ✓ Gemfile  +1 −0                                                         │
                               │   1 file · +1 −0                                                           │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
────────────────────────────── │                                                                            │
TOOLS                          │                                                                            │
▶ edit_file                (1) │                                                                            │
View all tools... (/tools)     │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │ ────────────────────────────────────────────────────────────────────────── │
                               │ 1 file changed · +1 −0 · Ctrl+D open diff                                  │
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>   Type a message or / for commands...                                                                       Tab complete · Shift+↵ newline
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;

exports[`layout snapshots same structure, density-only changes at 80x24 1`] = `
"⚡ Nexum                                MODE: CODE   MODEL: qwen3:30b   10:42:11
───────────────────────────────────────────────────────────────────────────────
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
────────────────────────────────────────────────────────────────────────────────
> create filesystem tool

◆ Nexum · local/qwen3:30b
  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project










───────────────────────────────────────────────────────────────────────────────
>   Type a message or / for commands...           Tab complete · Shift+↵ newline
───────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;

exports[`layout snapshots same structure, density-only changes at 100x30 1`] = `
"⚡ Nexum · Autonomous Coding Agent                          MODE: CODE   MODEL: qwen3:30b   10:42:11
───────────────────────────────────────────────────────────────────────────────────────────────────
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
────────────────────────────────────────────────────────────────────────────────────────────────────
> create filesystem tool

◆ Nexum · local/qwen3:30b
  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project
















───────────────────────────────────────────────────────────────────────────────────────────────────
>   Type a message or / for commands...                               Tab complete · Shift+↵ newline
───────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;

exports[`layout snapshots same structure, density-only changes at 120x30 1`] = `
"⚡ Nexum · Autonomous Coding Agent                                              MODE: CODE   MODEL: qwen3:30b   10:42:11
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
> create filesystem tool

◆ Nexum · local/qwen3:30b
  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project
















───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>   Type a message or / for commands...                                                   Tab complete · Shift+↵ newline
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;

exports[`layout snapshots same structure, density-only changes at 160x45 1`] = `
"⚡ Nexum · Autonomous Coding Agent                                                                                      MODE: CODE   MODEL: qwen3:30b   10:42:11
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
> create filesystem tool

◆ Nexum · local/qwen3:30b
  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project































───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>   Type a message or / for commands...                                                                                           Tab complete · Shift+↵ newline
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;

exports[`layout snapshots same structure, density-only changes at 220x60 1`] = `
"⚡ Nexum · Autonomous Coding Agent                                                                                                                                                  MODE: CODE   MODEL: qwen3:30b   10:42:11
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[Chat] │  Plan  │  Tasks  │  Changes  │  Logs  │ Ctrl+P Palette
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
> create filesystem tool

◆ Nexum · local/qwen3:30b
  Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project














































───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>   Type a message or / for commands...                                                                                                                                                       Tab complete · Shift+↵ newline
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m"
`;
